--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,11 +24,11 @@
 		</activity>
         <activity android:name="CallBackActivity" android:label="@string/app_name" android:launchMode="singleInstance">
 		    <intent-filter>
-		        <action android:name="android.intent.action.VIEW" />
-		        <category android:name="android.intent.category.DEFAULT" />
-		        <category android:name="android.intent.category.BROWSABLE" />
-		        <data android:scheme="Callback" />
-		    </intent-filter>
+	            <action android:name="android.intent.action.VIEW" />
+	            <category android:name="android.intent.category.DEFAULT" />
+	            <category android:name="android.intent.category.BROWSABLE" />
+	            <data android:scheme="taskquest" android:host="oauth"/>
+	        </intent-filter>
 		</activity>
         
         <uses-library android:name="com.google.android.maps" />
